turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:22: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
If you intended to match against value left in class Turmite, you must use backticks, like: case `left` =>
    case left => gauche(); avance()
         ^Turmite:23: warning: unreachable code due to variable pattern 'left' on line 40
If you intended to match against value pdv in class Turmite, you must use backticks, like: case `pdv` =>
    case pdv => avance()
                      ^Turmite:24: warning: unreachable code due to variable pattern 'left' on line 40
If you intended to match against value dt in class Turmite, you must use backticks, like: case `dt` =>
    case dt => droite();droite()
            ^Turmite:25: warning: unreachable code due to variable pattern 'left' on line 40
If you intended to match against value right in class Turmite, you must use backticks, like: case `right` =>
    case right => droite()
               ^Turmite:23: warning: unreachable code
    case pdv => avance()
                      ^Turmite:23: warning: unreachable code
    case pdv => avance()
                      ^Turmite:4: error: overriding method left in class AbstractBuggle of type ()Unit;
 value left needs `override' modifier
val left = 2
    ^Turmite:8: error: overriding method right in class AbstractBuggle of type ()Unit;
 value right needs `override' modifier
val right = 8
    ^